--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="menu">Leadership</div>
 		<div class="sidebar">
 			<p>Executive Director</p>
-			<p href="footer">Independent Director</p>
+			<p>Independent Director</p>
 
 		</div>
 		<div class="content">
@@ -24,7 +24,7 @@
 			<div class="column">
 				<div class="avatar1"></div>
 				<h3 class="username">Fabiola R. Arredondo</h3>
-				<p class="comment">Independent Director<br>
+				<p class="comment">Independent Director<br><br>
 					Fabiola R. Arredondo has been the Managing Partner of Siempre Holdings, a private, single family investment office based in Greenwich, Connecticut since 2001. She also currently serves as a director of Burberry Group plc and National Public Radio Inc. (NPR), and is a member and prior Co-Chair of the National Council of the World Wildlife Fund. She has previously served on the Boards of Experian plc, Rodale Inc., Saks Inc., Intelsat S.A., Bankinter S.A., BOC Group plc and Sesame Workshop. Ms. Arredondo previously held senior operating roles at Yahoo! Inc., the British Broadcasting Corporation (BBC), and Bertelsmann SE & Co. KGaA.
 				</p>
 
@@ -32,30 +32,31 @@
 			<div class="column">
 				<div class="avatar2"></div>
 				<h3 class="username">Howard M. Averill</h3>
-				<p class="comment">Independent Director<br>
+				<p class="comment">Independent Director<br><br>
 				Howard M. Averill has served as Executive Vice President and Chief Financial Officer of Time Warner Inc., a global media and entertainment company, from January 2014 until June 2018. Mr. Averill previously served as Executive Vice President, Chief Financial Officer of Time Inc. from 2007 through the end of 2013. Prior to joining Time Inc., Mr. Averill spent 10 years at NBC Universal in a variety of financial roles. Earlier in his career, Mr. Averill worked in strategic planning for PepsiCo, Inc.</p>
 			</div>
 			<div class="column">
 				<div class="avatar3"></div>
 				<h3 class="username">John P. (JP) Bilbrey</h3>
-				<p class="comment">Independent Director<br>
+				<p class="comment">Independent Director<br><br>
 				John P. (JP) Bilbrey served as President and Chief Executive Officer of The Hershey Company, a global confectionery leader and producer of snack products in the U.S., from 2011 until his retirement in March 2017. He also served as Chairman of Hershey from 2015 until March 2017 and as Non-Executive Chairman from March 2017 to May 2018. Mr. Bilbrey joined the management team of Hershey as Senior Vice President, President Hershey International in 2003, serving as Senior Vice President, President Hershey North America from 2007 to 2010 and as Executive Vice President and Chief Operating Officer from 2010 to 2011. He previously spent 22 years at The Procter & Gamble Company.</p>
 			</div>
 			<div class="column">
 				<div class="avatar4"></div>
 				<h3 class="username">Sarah Hofstetter</h3>
-				<p class="comment">Independent Director<br>Sarah Hofstetter is the former President of ComScore, Inc., a global information and analytics company that measures consumer audiences and advertising across media platforms. Ms. Hofstetter previously held several senior executive roles at 360i, a U.S. advertising arm of Dentsu, Inc., a Japanese advertising and public relations company, serving as Chairwoman from April 2018 through October 2018, Chief Executive Officer from 2013 until April 2018 and Senior Vice President, Emerging Media & Brand Strategy from 2006 to 2010. Prior to joining 360i, Ms. Hofstetter was President and Founder of Kayak Communications, a marketing agency focused on developing brand strategy and communications plans for new media brands. Before starting her own agency, she spent 10 years at Net2Phone, one of the world’s first providers of VoIP technology, in a series of senior leadership positions.
+				<p class="comment">Independent Director<br><br>
+					Sarah Hofstetter is the former President of ComScore, Inc., a global information and analytics company that measures consumer audiences and advertising across media platforms. Ms. Hofstetter previously held several senior executive roles at 360i, a U.S. advertising arm of Dentsu, Inc., a Japanese advertising and public relations company, serving as Chairwoman from April 2018 through October 2018, Chief Executive Officer from 2013 until April 2018 and Senior Vice President, Emerging Media & Brand Strategy from 2006 to 2010. Prior to joining 360i, Ms. Hofstetter was President and Founder of Kayak Communications, a marketing agency focused on developing brand strategy and communications plans for new media brands. Before starting her own agency, she spent 10 years at Net2Phone, one of the world’s first providers of VoIP technology, in a series of senior leadership positions.
 			</div>
 			<div class="column">
 				<div class="avatar5"></div>
 				<h3 class="username">Bennett Dorrance</h3>
-				<p class="comment">Independent Director<br>
+				<p class="comment">Independent Director<br><br>
 				Bennett Dorrance is Managing Director and a co-founder of DMB Associates, a real estate development firm headquartered in Phoenix, Arizona that he co-founded in 1984, which specializes in large master planned communities. As a descendent of Campbell Soup Company’s founder and a significant shareholder, Mr. Dorrance has extensive knowledge of Campbell’s history, organization and culture, and adds the perspective of a long-term, highly committed director and shareholder to the deliberations and decisions of the Board.</p>
 			</div>
 			<div class="column">
 				<div class="avatar6"></div>
 				<h3 class="username">Maria Teresa (Tessa) Hilado</h3>
-				<p class="comment">Independent Director<br>
+				<p class="comment">Independent Director<br><br>
 				Maria Teresa (Tessa) Hilado was Executive Vice President and Chief Financial Officer of Allergan PLC, a global pharmaceutical company, from December 2014 until February 2018. Prior to joining Allergan, Ms. Hilado served as senior vice president, finance and treasurer of PepsiCo Inc. from 2009 until 2014. She previously served as vice president and treasurer for Schering-Plough Corp. from 2008 to 2009 and spent more than 17 years with General Motors Co. in leadership roles of increasing responsibility, including assistant treasurer and CFO, GMAC Commercial Finance.</p>
 			</div>
 			<div class="clear"></div>
